--- a/frontend/src/styles/_global.sass
+++ b/frontend/src/styles/_global.sass
@@ -7,6 +7,9 @@
     list-style-type: none
     outline: none
 
+body
+    background-color: #EFEFEF
+
 a
     color: inherit
     text-decoration: none
