добавление постов, их вывод

--- a/frontend/src/styles/style.sass
+++ b/frontend/src/styles/style.sass
@@ -1,1 +1,19 @@
 @import "_global.sass"
+
+.post
+    &__userName-href
+        padding: 2px
+        border-radius: 3px
+
+        &:hover
+            background-color: rgba(#d1d1d1, .5)
+
+    &__title-href:hover
+        color: #1e72b3
+
+    &__tags-item
+        cursor: pointer
+        border-radius: 3px
+
+        &:hover
+            background-color: rgba(#d1d1d1, .5)
