--- a/frontend/src/styles/style.sass
+++ b/frontend/src/styles/style.sass
@@ -17,3 +17,9 @@
 
         &:hover
             background-color: rgba(#d1d1d1, .5)
+
+.profileCard__item:hover
+    background-color: lightgrey
+    color: #6670DF
+
+        
